--- a/Proteomics/Proteomics.csproj
+++ b/Proteomics/Proteomics.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{475C3B7B-4367-4BC8-8192-2A850C72812B}</ProjectGuid>
+    <ProjectGuid>{DA8E4387-675C-42E7-9444-770548A5108E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SoftwareLockMass</RootNamespace>
-    <AssemblyName>SoftwareLockMass</AssemblyName>
+    <RootNamespace>Proteomics</RootNamespace>
+    <AssemblyName>Proteomics</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -49,53 +49,26 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UsefulProteomicsDatabases, Version=1.0.1.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\UsefulProteomicsDatabases.1.0.1\lib\net451\UsefulProteomicsDatabases.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalibrationFunctions\CalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionClustering.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionHack.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunctionHackMean.cs" />
-    <Compile Include="CalibrationFunctions\ConstantCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\CubicCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\DataPoint.cs" />
-    <Compile Include="CalibrationFunctions\IdentityCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\KDTree.cs" />
-    <Compile Include="CalibrationFunctions\KDTreeCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\LinearCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\MedianCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\QuadraticCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\QuarticCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\TrainingPoint.cs" />
-    <Compile Include="SoftwareLockMassParams.cs" />
-    <Compile Include="SoftwareLockMassRunner.cs" />
+    <Compile Include="AminoAcid.cs" />
+    <Compile Include="AminoAcidPolymer.cs" />
+    <Compile Include="ChemicalFormulaFragment.cs" />
+    <Compile Include="ChemicalFormulaModification.cs" />
+    <Compile Include="ClassExtensions.cs" />
+    <Compile Include="Fragment.cs" />
+    <Compile Include="FragmentTypes.cs" />
+    <Compile Include="IAminoAcid.cs" />
+    <Compile Include="IAminoAcidSequence.cs" />
+    <Compile Include="IIsotopologue.cs" />
+    <Compile Include="IProtease.cs" />
+    <Compile Include="Isotopologue.cs" />
+    <Compile Include="Modification.cs" />
+    <Compile Include="ModificationCollection.cs" />
+    <Compile Include="ModificationSites.cs" />
+    <Compile Include="Peptide.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XML\mzIdentML1_1_1.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\CSMSL\CSMSL\IO\MzML\MzML.csproj">
-      <Project>{012434FB-88A9-4DEC-B887-5F64C0B481D4}</Project>
-      <Name>MzML</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\CSMSL\CSMSL\IO\Thermo\Thermo.csproj">
-      <Project>{24DC85FF-E97B-4140-9614-77DD8FDDD32F}</Project>
-      <Name>Thermo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MassSpectrometry\MassSpectrometry.csproj">
-      <Project>{9BF1F2FD-C17A-4151-861A-939FE342EC38}</Project>
-      <Name>MassSpectrometry</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Proteomics\Proteomics.csproj">
-      <Project>{DA8E4387-675C-42E7-9444-770548A5108E}</Project>
-      <Name>Proteomics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Spectra\Spectra.csproj">
-      <Project>{088E4FCB-D580-4BAD-A811-A1796A7666D2}</Project>
-      <Name>Spectra</Name>
-    </ProjectReference>
+    <Compile Include="Terminus.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
