--- a/Proteomics/Proteomics.csproj
+++ b/Proteomics/Proteomics.csproj
@@ -32,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.3.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Chemistry.1.0.3\lib\net451\Chemistry.dll</HintPath>
+    <Reference Include="Chemistry, Version=1.0.4.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Chemistry.1.0.4\lib\net451\Chemistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MathNet.Numerics, Version=3.11.1.0, Culture=neutral, processorArchitecture=MSIL">
@@ -55,13 +55,13 @@
     <Compile Include="AminoAcidPolymer.cs" />
     <Compile Include="ChemicalFormulaFragment.cs" />
     <Compile Include="ChemicalFormulaModification.cs" />
-    <Compile Include="ClassExtensions.cs" />
+    <Compile Include="Util\ClassExtensions.cs" />
     <Compile Include="Fragment.cs" />
     <Compile Include="FragmentTypes.cs" />
-    <Compile Include="IAminoAcid.cs" />
-    <Compile Include="IAminoAcidSequence.cs" />
-    <Compile Include="IIsotopologue.cs" />
-    <Compile Include="IProtease.cs" />
+    <Compile Include="Interfaces\IAminoAcid.cs" />
+    <Compile Include="Interfaces\IAminoAcidSequence.cs" />
+    <Compile Include="Interfaces\IIsotopologue.cs" />
+    <Compile Include="Interfaces\IProtease.cs" />
     <Compile Include="Isotopologue.cs" />
     <Compile Include="Modification.cs" />
     <Compile Include="ModificationCollection.cs" />
